# ai-code-review-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
docs/: API.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base_agent.py  orchestrator.py  quality_agent.py  security_agent.py  testing_agent.py
src/analyzers/: __init__.py  llm_analyzer.py  static_analyzer.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  github_service.py  review_service.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_utils.py
tests/test_agents/: __init__.py  test_orchestrator.py  test_quality_agent.py  test_security_agent.py  test_testing_agent.py
tests/test_analyzers/: __init__.py  test_llm_analyzer.py  test_static_analyzer.py
tests/test_api/: __init__.py  test_endpoints.py
tests/test_services/: test_github_service.py  test_review_service.py
